--- a/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
+++ b/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
@@ -1,19 +1,16 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/datajpa
-    username: sa
+    url: jdbc:mysql://localhost:3306/friendsdb?serverTimezone=UTC&useSSL=false
+    username: root
     password: 1234
-    driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
-        # show_sql: true
         format_sql: true
 
 logging:
   level:
     org.hibernate.SQL: debug
-    # org.hibernate.type: trace
