--- a/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
+++ b/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
@@ -1,8 +1,26 @@
+#spring:
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/friendsdb?serverTimezone=UTC&useSSL=false
+#    username: root
+#    password: 1234
+#
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    properties:
+#      hibernate:
+#        format_sql: true
+#
+#logging:
+#  level:
+#    org.hibernate.SQL: debug
+
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/friendsdb?serverTimezone=UTC&useSSL=false
+    url: jdbc:mysql://localhost:3306/datajpa?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
-    password: 1234
+    password: leejwoo1955!@
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
