--- a/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
+++ b/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        format_sql: true
+        format_sql: update
 
 logging:
   level:
