테이블 사라짐 해결?

--- a/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
+++ b/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
-        format_sql: update
+        format_sql: true
 
 logging:
   level:
