--- a/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
+++ b/data-jpa_Pool구현/data-jpa/src/main/resources/application.yml
@@ -1,31 +1,13 @@
-#spring:
-#  datasource:
-#    url: jdbc:mysql://teampool-db.cfsye4sy4bwo.ap-northeast-2.rds.amazonaws.com:3306/teampool_db?useSSL=false&serverTimezone=Asia/Seoul
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    username: admin
-#    password: loopmaet123!!
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    properties:
-#      hibernate:
-#        format_sql: true
-#
-#logging:
-#  level:
-#    org.hibernate.SQL: debug
-
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/datajpa?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: leejwoo1955!@
+    url: jdbc:mysql://teampool-db.cfsye4sy4bwo.ap-northeast-2.rds.amazonaws.com:3306/teampool_db?useSSL=false&serverTimezone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
+    username: admin
+    password: loopmaet123!!
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
